<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="scoresapp">SCORES APP</string>
    <string name="spotifystreamer">SPOTIFY STREAMER</string>
    <string name="libraryapp">LIBRARY APP</string>
    <string name="builditbigger">BUILD IT BIGGER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="xyzreader">XYZ READER</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="sstoast">"This button will launch Spotify Streamer"</string>
    <string name="satoast">"This button will launch Scores App"</string>
    <string name="latoast">"This button will launch Library App"</string>
    <string name="bibtoast">"This button will launch a Bigger app"</string>
    <string name="xyzrtoast">"This button will launch XYZ Reader"</string>
    <string name="ctoast">"This button will launch my Capstone App"</string>
</resources>
