<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/bSpotifyStreamer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="35dp"
                android:background="#2196F3"
                android:padding="22dp"
                android:text="@string/spotifystreamer"
                android:textColor="#fff"
                android:shadowColor="#E0E0E0"
                android:elevation="2dp" />

            <Button
                android:id="@+id/bScoresApp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bSpotifyStreamer"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="7dp"
                android:background="#2196F3"
                android:padding="22dp"
                android:text="@string/scoresapp"
                android:textColor="#fff"
                android:shadowColor="#E0E0E0"
                android:elevation="2dp" />

            <Button
                android:id="@+id/bLibraryApp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bScoresApp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="7dp"
                android:background="#2196F3"
                android:padding="22dp"
                android:text="@string/libraryapp"
                android:textColor="#fff"
                android:elevation="2dp"
                android:shadowColor="#E0E0E0" />

            <Button
                android:id="@+id/bBuildItBigger"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bLibraryApp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="7dp"
                android:background="#2196F3"
                android:padding="22dp"
                android:text="@string/builditbigger"
                android:textColor="#fff"
                android:shadowColor="#E0E0E0"
                android:elevation="2dp" />

            <Button
                android:id="@+id/bXYZReader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bBuildItBigger"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="7dp"
                android:background="#2196F3"
                android:padding="22dp"
                android:text="@string/xyzreader"
                android:textColor="#fff"
                android:shadowColor="#E0E0E0"
                android:elevation="2dp" />

            <Button
                android:id="@+id/bCapstone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bXYZReader"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="7dp"
                android:background="#009688"
                android:padding="22dp"
                android:text="@string/capstone"
                android:textColor="#fff"
                android:layout_marginBottom="20dp"
                android:shadowColor="#E0E0E0"
                android:elevation="2dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
